syntax = "proto3";

package processer;

import "google/protobuf/timestamp.proto";

service Processor {
    rpc RequestNotification (NotificationRequest) returns (stream Notification);
    rpc RegisterProcess (Process) returns (RegisteredMessage);
    rpc RegisterStreamProcess (stream Process) returns (stream RegisteredMessage);
}

message NotificationRequest{}
message Notification{
    string message = 1;
}

message Process{}
message RegisteredMessage{
    google.protobuf.Timestamp recievedAt = 1;
}